# tmt-web

./: .env.example  .gitignore  Cargo.toml  README.md  agenda.md  api.md  data-model.md  docker-compose.yml  ideas.md  pre_tests.py  pre_tests.sh  requirements.txt  tests.py
migrations/2024-04-10-174950_pwd_fns/: down.sql  up.sql
migrations/2024-04-11-162738_user/: down.sql  up.sql
migrations/2024-04-11-200020_session/: up.sql
migrations/2024-04-12-202118_tab/: down.sql  up.sql
migrations/2024-04-12-210654_tab-dates/: up.sql
migrations/2024-04-14-171109_user-creation/: up.sql
migrations/2024-04-18-153916_fix-check-pwd-fn/: down.sql  up.sql
migrations/2024-04-23-205256_tags/: down.sql  up.sql
migrations/2024-04-24-140849_tabs-tags/: down.sql  up.sql
src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  types.rs
src/db/: session.rs  sessions.rs  tabs.rs  tags.rs  users.rs  util.rs
src/models/: invite.rs  session.rs  tab.rs  tag.rs  user.rs
src/routes/: _test_utils.rs  auth.rs  misc.rs  tabs.rs  tags.rs  users.rs
tmt-web-backend/: Cargo.toml
tmt-web-backend/migrations/2024-04-12-210654_tab-dates/: down.sql
tmt-web-backend/migrations/2024-04-14-171109_user-creation/: down.sql
tmt-web-backend/src/: lib.rs  main.rs  models.rs
tmt-web-backend/src/db/: tags.rs  users.rs  util.rs
tmt-web-fe/: agenda.md  package-lock.json  package.json
tmt-web-fe/public/: index.html
tmt-web-fe/src/: App.tsx  Login.tsx  Logout.tsx  Router.tsx  api.ts  authToken.tsx  index.css
tmt-web-frontend/: Cargo.toml  index.html
(+28 files in other folders)
