[package]
name = "tmt-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["tracing", "typed-header"] }
axum-template = { version = "2.2.0", features = ["handlebars"] }
chrono = { version = "0.4.37", features = ["serde"] }
deadpool-diesel = { version = "0.6.0", features = [
  "postgres",
  "rt_tokio_1",
  "tracing",
] }
diesel = { version = "2.1.5", features = [
  "postgres",
  "postgres_backend",
  "time",
  "chrono",
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0.82"
axum-test = "14.8.0"
fake = "2.9.2"
